Removed pointer events on projects images to prevent double-tap zoom on mobile

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -280,6 +280,7 @@ header hr {
 	max-width: 300px;
 	max-height: 300px;
 	flex-grow: 0;
+	pointer-events: none;
 }
 
 #banana-bonanza {
